fixing css bug on mobile right margin

--- a/css.css
+++ b/css.css
@@ -8,9 +8,9 @@
   background-color: coral;
 } */
 
-*{
+/* *{
   outline: 1px solid red;
- }
+ } */
 
 
 h2 {
